# LiveSense

./: .gitignore  LICENSE  LiveSense_Final_Validation.ipynb  README.md  app.py  pyproject.toml
.streamlit/: config.toml
analytics/: __init__.py  session.py
assets/models/: README.md
camera/: __init__.py  processor.py
config/: __init__.py  settings.py  settings.yaml
dashboard/: __init__.py  app.py  theme.py
docs/: architecture.md  roadmap.md
events/: __init__.py
reports/: __init__.py
signals/: __init__.py  audio.py  drowsiness.py  models.py  temporal.py
tests/: test_audio_activity.py  test_camera_processor.py  test_dashboard_plot.py  test_drowsiness.py  test_face_landmarks.py  test_fps.py  test_hand_phone.py  test_object_observations.py  test_session.py  test_settings.py  test_temporal.py  test_web_app.py
utils/: __init__.py  fps.py
vision/: __init__.py  face_landmarks.py  hand_phone.py  object_observations.py
web/: app.js  index.html  reports.css  reports.html  reports.js  styles.css
