[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "livesense"
version = "0.1.0"
description = "Real-time Human Signal Intelligence using Computer Vision."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Samsonnie" },
]
dependencies = [
  "av>=12,<17",
  "fastapi>=0.115,<1",
  "mediapipe>=0.10.35,<1",
  "numpy>=1.26,<3",
  "opencv-contrib-python>=5,<6",
  "PyYAML>=6,<7",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<8",
  "ruff>=0.5,<1",
]

[tool.setuptools]
packages = [
  "analytics",
  "camera",
  "config",
  "events",
  "reports",
  "signals",
  "utils",
  "vision",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
